# urban-auto-vox-rs

./: .env.example  .gitignore  Cargo.toml  LICENSE  MIGRATION.md  README.md  batch-process.sh  clean-all.sh  docker-compose.yml  gui-modern.sh  gui_modern.py  setup-gpu.sh  start.sh
crates/voxel-binvox/: Cargo.toml
crates/voxel-binvox/src/: lib.rs
crates/voxel-pipeline/: Cargo.toml
crates/voxel-pipeline/src/: config.rs  grid.rs  index_build.rs  main.rs  processor.rs  sinks.rs  swap.rs  translate_build.rs  voxelizer.rs  voxid.rs
crates/voxel-postgis/: Cargo.toml
crates/voxel-postgis/src/: copy_binary.rs  lib.rs  schema.rs
crates/voxel-schema/: Cargo.toml
crates/voxel-schema/src/: ewkb.rs  grid_mapping.rs  index.rs  lib.rs  surface.rs  translate.rs
docker/: Dockerfile.voxel-pipeline-rs  docker-compose.voxel-pipeline-rs.yml
