[package]
name = "voxel-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI binary orchestrating steps 4-6 of the Urban-Auto-Vox pipeline (translate, index, grid mapping, CUDA voxelization, voxel ingestion)."

[[bin]]
name = "voxel-pipeline"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
csv = { workspace = true }
indicatif = { workspace = true }
voxel-schema = { workspace = true }
voxel-binvox = { workspace = true }
voxel-postgis = { workspace = true }
